Fixed hamburger mis-alignment

--- a/styles.css
+++ b/styles.css
@@ -228,6 +228,8 @@ button:hover {
       #hamburger {
             display: block !important;
             font-size: 36px;
+            position: absolute;
+            right: 4%;
       }
 
       #nav--items {
